front page done

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles/style.css" />
+    <script src="./js/service.js"></script>
 
     <script
       src="https://kit.fontawesome.com/ecdf6be2c2.js"
@@ -16,50 +17,35 @@
   </head>
   <body>
     <header>
-      <a href="index.html" class="logo">
-        <img src="./img/logo.png"  alt="Logo Orinoco" class="logo__img" />
-      </a>
+      <a href="index.html" class="logo"> 
+        <img src="./img/logo Orinoco.svg" alt=""> </a>
       <nav>
         <div class="nav__order">
-          <a href="order.html" >Commande</a>
+          <a href="order.html">COMMANDE</a>
         </div>
         <div class="nav__basket">
-          <a href="basket.html" class="basket"><i class="fas fa-shopping-basket"></i> Panier</a>
+          <a href="basket.html" class="basket"
+            ><i class="fas fa-shopping-basket"></i> PANIER</a
+          >
         </div>
       </nav>
     </header>
     <main>
       <section class="opening">
-        <h1>Bienvenue chez Orinoco, revendeur d'appareils photo vintages !</h1>
-        <p>Parcourez notre sélection et découvrez nos produits.</p>
+        <h1>Bienvenue sur Orinoco !</h1>
+        <p>Parcourez notre catalogue d'appareils photo vintage !</p>
       </section>
-      <section class="products">
-        <a href="" class="prod1 products__card">
-          <img src="../back-end/images/vcam_1.jpg" width=250 alt="" class="card__img">
-          <h2 class="card__title">Appareil Photo vintage</h2>
-        </div>
-        <div class="prod2 products__card">
-          <img src="../back-end/images/vcam_1.jpg" width=250 alt="" class="card__img">
-          <h2 class="card__title">Appareil Photo vintage</h2>
-        </div>
-        <div class="prod3 products__card">
-          <img src="../back-end/images/vcam_1.jpg" width=250 alt="" class="card__img">
-          <h2 class="card__title">Appareil Photo vintage</h2>
-        </div>
-        <div class="prod4 products__card">
-          <img src="../back-end/images/vcam_1.jpg" width=250 alt="" class="card__img">
-          <h2 class="card__title">Appareil Photo vintage</h2>
-        </div>
-        <div class="prod5 products__card">
-          <img src="../back-end/images/vcam_1.jpg" width=250 alt="" class="card__img">
-          <h2 class="card__title">Appareil Photo vintage</h2>
-        </div>
-        <div class="prod6 products__card">
-          <img src="../back-end/images/vcam_1.jpg" width=250 alt="" class="card__img">
-          <h2 class="card__title">Appareil Photo vintage</h2>
-        </div>
+      <section class="table__products">
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer__a">
+        •
+        <a href="">MENTIONS LEGALES</a>
+        •
+        <a href="">CONTACT</a>
+        •
+      </div>
+    </footer>
   </body>
 </html>
