--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://flofeu.github.io/FlorentFeugere_5_22022021/front-end/index.html
+    <meta http-equiv="refresh" content="0; url=flofeu.github.io/FlorentFeugere_5_22022021/front-end/index.html
     ">
     <title>Document</title>
 </head>
