Page produit réalisée

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles/style.css" />
-    <script src="./js/service.js"></script>
 
     <script
       src="https://kit.fontawesome.com/ecdf6be2c2.js"
@@ -17,8 +16,9 @@
   </head>
   <body>
     <header>
-      <a href="index.html" class="logo"> 
-        <img src="./img/logo Orinoco.svg" alt=""> </a>
+      <a href="index.html" class="logo">
+        <img src="./img/logo Orinoco.svg" alt="" />
+      </a>
       <nav>
         <div class="nav__order">
           <a href="order.html">COMMANDE</a>
@@ -35,7 +35,121 @@
         <h1>Bienvenue sur Orinoco !</h1>
         <p>Parcourez notre catalogue d'appareils photo vintage !</p>
       </section>
-      <section class="table__products">
+      <section class="list__products">
+        <a href="product.html" class="product">
+          <img
+            src="../front-end/img/vcam_1.jpg"
+            class="product__img"
+            alt="appareil photo vintage 1"
+          />
+
+          <div class="product__description">
+            <h2 class="product__name">Appareil photo 1</h2>
+            <p class="product__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+            <p class="product__price"><strong>506 €</strong></p>
+          </div>
+          <div class="product__anchor">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </a>
+        <a href="product.html" class="product">
+          <img
+            src="../front-end/img/vcam_2.jpg"
+            class="product__img"
+            alt="appareil photo vintage 2"
+          />
+
+          <div class="product__description">
+            <h2 class="product__name">Appareil photo 2</h2>
+            <p class="product__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+            <p class="product__price"><strong>1300 €</strong></p>
+          </div>
+          <div class="product__anchor">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </a>
+        <a href="product.html" class="product">
+          <img
+            src="../front-end/img/vcam_3.jpg"
+            class="product__img"
+            alt="appareil photo vintage 3"
+          />
+
+          <div class="product__description">
+            <h2 class="product__name">Appareil photo 3</h2>
+            <p class="product__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+            <p class="product__price"><strong>2100 €</strong></p>
+          </div>
+          <div class="product__anchor">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </a>
+        <a href="product.html" class="product">
+          <img
+            src="../front-end/img/vcam_4.jpg"
+            class="product__img"
+            alt="appareil photo vintage 4"
+          />
+
+          <div class="product__description">
+            <h2 class="product__name">Appareil photo 4</h2>
+            <p class="product__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+            <p class="product__price"><strong>50000 €</strong></p>
+          </div>
+          <div class="product__anchor">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </a>
+        <a href="product.html" class="product">
+          <img
+            src="../front-end/img/vcam_5.jpg"
+            class="product__img"
+            alt="appareil photo vintage 5"
+          />
+          <div class="product__description">
+            <h2 class="product__name">Appareil photo 5</h2>
+            <p class="product__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+            <p class="product__price"><strong>99 €</strong></p>
+          </div>
+          <div class="product__anchor">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </a>
       </section>
     </main>
     <footer>
@@ -47,5 +161,6 @@
         •
       </div>
     </footer>
+    <script src="./js/service.js"></script>
   </body>
 </html>
