Page panier finie et page commande en cours

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="index.html" class="logo">
-        <img src="./img/logo Orinoco.svg" alt="" />
+        <img src="./img/logo_Orinoco.svg" alt="" />
       </a>
       <nav>
         <div class="nav__order">
@@ -55,9 +55,6 @@
             </p>
             <p class="product__price"><strong>506 €</strong></p>
           </div>
-          <div class="product__anchor">
-            <i class="fas fa-chevron-right"></i>
-          </div>
         </a>
         <a href="product.html" class="product">
           <img
@@ -77,9 +74,6 @@
               nulla pariatur.
             </p>
             <p class="product__price"><strong>1300 €</strong></p>
-          </div>
-          <div class="product__anchor">
-            <i class="fas fa-chevron-right"></i>
           </div>
         </a>
         <a href="product.html" class="product">
@@ -101,9 +95,6 @@
             </p>
             <p class="product__price"><strong>2100 €</strong></p>
           </div>
-          <div class="product__anchor">
-            <i class="fas fa-chevron-right"></i>
-          </div>
         </a>
         <a href="product.html" class="product">
           <img
@@ -124,9 +115,6 @@
             </p>
             <p class="product__price"><strong>50000 €</strong></p>
           </div>
-          <div class="product__anchor">
-            <i class="fas fa-chevron-right"></i>
-          </div>
         </a>
         <a href="product.html" class="product">
           <img
@@ -146,9 +134,6 @@
             </p>
             <p class="product__price"><strong>99 €</strong></p>
           </div>
-          <div class="product__anchor">
-            <i class="fas fa-chevron-right"></i>
-          </div>
         </a>
       </section>
     </main>
@@ -157,7 +142,7 @@
         •
         <a href="">MENTIONS LEGALES</a>
         •
-        <a href="">CONTACT</a>
+        <a href="mailto:contact@orinoco.com">CONTACT</a>
         •
       </div>
     </footer>
