--- a/front-end/order.html
+++ b/front-end/order.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <a href="index.html" class="logo">
-        <img src="./img/logo Orinoco.svg" alt="" />
+        <img src="./img/logo_Orinoco.svg" alt="" />
       </a>
       <nav>
         <div class="nav__order">
@@ -29,13 +29,29 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section class="opening">
+        <h1>Confirmation de votre commande</h1>
+      </section>
+      <section class="order__recap">
+        <h2>Merci d'avoir passé commande chez nous !</h2>
+        <p>Votre commande a bien été prise en compte.
+          Nous vous remercions et restons à votre disposition pour toute demande d'informations.
+          Vous recevrez un mail dès réception de votre règlement.
+        </p>
 
+        <div class="order__details">
+          <p><strong>Identifiant de votre commande : <span id="order__id"></strong></span></p>
+          <p ><strong>Montant de votre commande : <span id="order__price"></span>€</strong></p>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="footer__a">
         •
         <a href="">MENTIONS LEGALES</a>
         •
-        <a href="">CONTACT</a>
+        <a href="mailto:contact@orinoco.com">CONTACT</a>
         •
       </div>
     </footer>
