--- a/front-end/product.html
+++ b/front-end/product.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <a href="index.html" class="logo">
-        <img src="./img/logo Orinoco.svg" alt="" />
+        <img src="./img/logo_Orinoco.svg" alt="" />
       </a>
       <nav>
         <div class="nav__order">
@@ -50,7 +50,7 @@
         </div>
         <div class="details__options">
           <label for="lense-select">Choisissez une lentille:</label>
-          <select name="lenses" id="lense-select" required>
+          <select class="options__select" name="lenses" id="lense-select" required>
             <option value="">--Choisissez une option--</option>
             <option value="1">Lentille 1</option>
             <option value="2">Lentille 2</option>
@@ -70,7 +70,7 @@
         •
         <a href="">MENTIONS LEGALES</a>
         •
-        <a href="">CONTACT</a>
+        <a href="mailto:contact@orinoco.com">CONTACT</a>
         •
       </div>
     </footer>
