JS pour page produit fonctionnel - need perfectionnement

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -36,7 +36,7 @@
         <p>Parcourez notre catalogue d'appareils photo vintage !</p>
       </section>
       <section class="list__products">
-        <a href="product.html" class="product">
+        <!-- <a href="product.html" class="product">
           <img
             src="../front-end/img/vcam_1.jpg"
             class="product__img"
@@ -134,7 +134,7 @@
             </p>
             <p class="product__price"><strong>99 €</strong></p>
           </div>
-        </a>
+        </a> -->
       </section>
     </main>
     <footer>
