--- a/front-end/product.html
+++ b/front-end/product.html
@@ -34,7 +34,7 @@
         <h1>Détails de l'appareil choisi</h1>
       </section>
       <section class="details">
-        <img src="../front-end/img/vcam_1.jpg" class="details__img" alt="" />
+        <!-- <img src="../front-end/img/vcam_1.jpg" class="details__img" alt="" />
         <div class="details__name">
           <h2>XXX XX XX</h2>
         </div>
@@ -61,7 +61,7 @@
         </div>
         <button class="details__btn" name="Ajouter au panier" type="submit">
           Ajouter au panier
-        </button>
+        </button> -->
       </section>
     </main>
 
@@ -74,5 +74,6 @@
         •
       </div>
     </footer>
+    <script src="./js/product.js"></script>
   </body>
 </html>
