--- a/front-end/product.html
+++ b/front-end/product.html
@@ -34,34 +34,7 @@
         <h1>Détails de l'appareil choisi</h1>
       </section>
       <section class="details">
-        <!-- <img src="../front-end/img/vcam_1.jpg" class="details__img" alt="" />
-        <div class="details__name">
-          <h2>XXX XX XX</h2>
-        </div>
-        <div class="details__text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.
-          </p>
-        </div>
-        <div class="details__options">
-          <label for="lense-select">Choisissez une lentille:</label>
-          <select class="options__select" name="lenses" id="lense-select" required>
-            <option value="">--Choisissez une option--</option>
-            <option value="1">Lentille 1</option>
-            <option value="2">Lentille 2</option>
-          </select>
-        </div>
-        <div class="details__price">
-          <p><strong>506</strong>€</p>
-        </div>
-        <button class="details__btn" name="Ajouter au panier" type="submit">
-          Ajouter au panier
-        </button> -->
+        <!-- Code injecté par JS -->
       </section>
     </main>
 
