product.js fini et basket.js commencé

--- a/front-end/product.html
+++ b/front-end/product.html
@@ -47,6 +47,7 @@
         •
       </div>
     </footer>
+    <script src="./js/service.js"></script>
     <script src="./js/product.js"></script>
   </body>
 </html>
