--- a/front-end/basket.html
+++ b/front-end/basket.html
@@ -33,13 +33,10 @@
       <section class="opening">
         <h1>Mon panier</h1>
       </section>
-      
+
       <section class="basket">
         <h2>Résumé de votre panier</h2>
-        <div class="basket__product">
-          <img src="../front-end/img/vcam_1.jpg" alt="" class="basket__productimg">
-          <div class="basket__productprice"><strong>Prix: 506 €</strong></div>
-          <div class="basket__productdetails">XX XX XXX</div>
+        <div class="main__basket">
         </div>
         <div class="basket__price"><strong> PRIX TOTAL : 506 €</strong></div>
       </section>
@@ -58,7 +55,9 @@
             />
           </div>
           <div class="form__email">
-            <label for="email">Votre adresse mail: <span class="required">*</span></label>
+            <label for="email"
+              >Votre adresse mail: <span class="required">*</span></label
+            >
             <input
               type="email"
               name="user_email"
@@ -68,7 +67,9 @@
             />
           </div>
           <div class="form__address">
-            <label for="address1">Votre adresse: <span class="required">*</span></label>
+            <label for="address1"
+              >Votre adresse: <span class="required">*</span></label
+            >
 
             <input
               type="text"
@@ -89,7 +90,9 @@
             />
           </div>
           <div class="form__city">
-            <label for="city">Votre ville: <span class="required">*</span></label>
+            <label for="city"
+              >Votre ville: <span class="required">*</span></label
+            >
             <input
               type="text"
               name="user_city"
@@ -99,7 +102,9 @@
             />
           </div>
           <div class="form__postalcode">
-            <label for="zip">Code postal: <span class="required">*</span></label>
+            <label for="zip"
+              >Code postal: <span class="required">*</span></label
+            >
             <input
               type="text"
               name="user_zip"
@@ -419,8 +424,8 @@
               <option value="Western Sahara">Western Sahara</option>
               <option value="Yemen">Yemen</option>
               <option value="Zambia">Zambia</option>
-              <option value="Zimbabwe">Zimbabwe</option></select
-            >
+              <option value="Zimbabwe">Zimbabwe</option>
+            </select>
           </div>
           <div class="form__submit">
             <input type="submit" value="Valider la commande" />
@@ -438,5 +443,7 @@
         •
       </div>
     </footer>
+    <script src="./js/service.js"></script>
+    <script src="./js/basket.js"></script>
   </body>
 </html>
