--- a/front-end/index.html
+++ b/front-end/index.html
@@ -147,5 +147,6 @@
       </div>
     </footer>
     <script src="./js/service.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
