Notification nb produits dans panier / somme des prix du panier / favicon

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" type="image/svg" href="./img/favicon.svg" />
 
     <script
       src="https://kit.fontawesome.com/ecdf6be2c2.js"
@@ -24,9 +25,10 @@
           <a href="order.html">COMMANDE</a>
         </div>
         <div class="nav__basket">
-          <a href="basket.html" class="basket"
-            ><i class="fas fa-shopping-basket"></i> PANIER</a
-          >
+          <a href="basket.html" class="basket">
+            <i class="fas fa-shopping-basket"> <span id="itemsInCart"></span></i> 
+            PANIER
+          </a>
         </div>
       </nav>
     </header>
