--- a/front-end/basket.html
+++ b/front-end/basket.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" type="image/svg" href="./img/favicon.svg" />
+    
     <script
       src="https://kit.fontawesome.com/ecdf6be2c2.js"
       crossorigin="anonymous"
@@ -23,9 +25,10 @@
           <a href="order.html">COMMANDE</a>
         </div>
         <div class="nav__basket">
-          <a href="basket.html" class="basket active"
-            ><i class="fas fa-shopping-basket"></i> PANIER</a
-          >
+          <a href="basket.html" class="basket active">
+            <i class="fas fa-shopping-basket"> <span id="itemsInCart"></span></i> 
+            PANIER
+          </a>
         </div>
       </nav>
     </header>
@@ -38,7 +41,7 @@
         <h2>Résumé de votre panier</h2>
         <div class="main__basket">
         </div>
-        <div class="basket__price"><strong> PRIX TOTAL : 506 €</strong></div>
+        <div class="basket__price"></div>
       </section>
 
       <section class="order">
