--- a/front-end/basket.html
+++ b/front-end/basket.html
@@ -21,9 +21,6 @@
         <img src="./img/logo_Orinoco.svg" alt="" />
       </a>
       <nav>
-        <div class="nav__order">
-          <a href="order.html">COMMANDE</a>
-        </div>
         <div class="nav__basket">
           <a href="basket.html" class="basket active">
             <i class="fas fa-shopping-basket"> <span id="itemsInCart"></span></i> 
@@ -49,7 +46,7 @@
 
       <section class="order">
         <h2>Rentrez vos coordonnées pour passer commande:</h2>
-        <form method="POST">  
+        <form id="myForm">  
           <div class="form__firstName">
             <label for="firstName">Votre prénom: <span class="required">*</span></label>
             <input
@@ -109,7 +106,7 @@
             />
           </div>
           <div class="form__submit">
-            <input  value="Valider la commande" onclick="submitForm()"/>
+            <input type="submit" value="Valider la commande">
           </div>
         </form>
       </section>
