--- a/front-end/order.html
+++ b/front-end/order.html
@@ -21,9 +21,6 @@
         <img src="./img/logo_Orinoco.svg" alt="" />
       </a>
       <nav>
-        <div class="nav__order">
-          <a href="order.html" class="active">COMMANDE</a>
-        </div>
         <div class="nav__basket">
           <a href="basket.html" class="basket">
             <i class="fas fa-shopping-basket"> <span id="itemsInCart"></span></i> 
@@ -68,5 +65,6 @@
     </footer>
     
   <script src="./js/service.js"></script>
+  <script src="js/order.js"></script>
   </body>
 </html>
